--- a/projects/projects.html
+++ b/projects/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="../resources/siteTemplate.css" rel="stylesheet" type="text/css"/>
     <script  src="../resources/jquery-1.8.2.min.js"type="text/javascript"></script>
-    <script src="./lab7/resources/lab7jquery.js" type="text/javascript"></script>
+    <script src="../resources/lab7jquery.js" type="text/javascript"></script>
 
 
   </head>
