--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -40,7 +40,7 @@
         margin: 0 0.25em 0 0.25em;
       }
       .resumeBlock{
-        width: 1024px;
+        width: 90%;
         margin: 5px 0 0 0;
         padding: 1px;
 
