--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -85,8 +85,8 @@
     <h1>Ryan Mackenzie</h1>
       <ul id="contactInfo">
         <li>123 Any Avenue</li>
-        <li>Schenectady, New York xxxxx</li>
-        <li>518-728-7981</li>
+        <li>Schenectady, New York 00000</li>
+        <li>518 728 7981</li>
         <li><a href="mailto:macker2@rpi.edu">macker2@rpi.edu</a></li>
       </ul>
       
