--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Ryan Mackenzie - Resume</title>
+    <title>Ryan MacKenzie - Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="../../resources/siteTemplate.css" rel="stylesheet" type="text/css"/> 
     
@@ -82,7 +82,7 @@
 
   <body>
     <div id="content">
-    <h1>Ryan Mackenzie</h1>
+    <h1>Ryan MacKenzie</h1>
       <ul id="contactInfo">
         <li>123 Any Avenue</li>
         <li>Schenectady, New York 00000</li>
