--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -159,6 +159,32 @@
         </ul>
       </div>
       </div>
+      
+      <div class="resumeBlock">
+      <h2>PROGRAMMING LANGUAGES</h2>
+      <div class="resumeItem">
+        <ul>
+          <li>Java</li>
+          <li>C++</li>
+          <li>VBA</li>
+          <li>HTML</li>
+          <li>JavaScript</li>
+          <li>JSON</li>
+          <li>AJAX</li>
+          <li>XML</li>
+          <li>JQuery</li>
+          <li>CSS</li>
+          <li>ATOM</li>
+          <li>RSS</li>
+          <li>SQL</li>
+          <li>Cisco IOS</li>
+          <li>GitHub</li>
+          <li>Bitbucket</li>
+          <li>Hadoop</li>
+          </ul>
+        </div>
+      </div>
+
       <div class="resumeBlock">
       <h2>HONORS</h2>
       <div class="resumeItem">
