--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -76,7 +76,28 @@
         font-size: .75em;
         list-style: square;
       }
-      
+      .prLa{
+        padding-right: 74%;
+      }
+      .db{
+        padding-right: 2.5%; 
+      }
+      .ma{
+        padding-right: 1%; 
+      }
+      .mitr{
+        padding-left: 8%; 
+      }
+      .intro{
+        padding-left: 8%; 
+      }
+      .ho{
+        padding-right: 41.75%;
+      }
+      .semp{
+        padding-right: 22.41%;
+      }
+
     </style>
   </head>
 
@@ -99,7 +120,7 @@
             <h3>Computer Repair and Tutorials <h4><em>Self-Employed</em></h4></h3>
           </div>
           <div class="resumeItem">
-              <ul>
+              <ul class="semp">
                 <li>Support clients PC's with maintence and necessary secuirty packages.</li>
                 <li>Train cleients in How to use Application Software and basic Operating Sytem navigation.</li>
               </ul>
@@ -109,7 +130,7 @@
             <h3>MITR Project<h4>RPI, <em>Fall 2015 Final Group Project</em></h4></h3>
           </div>
           <div class="resumeItem">
-            <ul>
+            <ul class="mitr">
               <li>Created a web payroll databbase for Appatura/Data Communiqu&eeacute;</li>
               <li>This datbase allowed employees to log in and create Bi-Weekly Timesheets which were saved to a MySQL/MariaDB Database. This data could be summerized converted to monitary values and exported to CSV for import to ADP Payroll by the Controller/Manager.</li>
               <li class="note">Special Thanks to My Colleagues: David Ivey, Brandon Thorne, Tina Guo, Nina Padavile</li>
@@ -120,7 +141,7 @@
             <h3>Introduction to ITWS Project<h4>RPI, <em>Fall 2015 Final Group Project</em></h4></h3>
           </div>
           <div class="resumeItem">
-            <ul>
+            <ul class="intro">
               <li>Created a web app and databbase called Listen To This</li>
               <li>This datbase held hash+salted passwords passed by PHP and a curent song playlist for each current room. This app enabled users to both chat and stream SoundCloud songs simolteniously in a user created room.</li>
               <li class="note">Special Thanks to my Colleagues: Jeremy Simon, Zhihao Zhou</li>
@@ -131,7 +152,7 @@
             <h3>Database Systems Project<h4>HVCC, <em>Spring 2015 Final Project</em></h4></h3>
           </div>
           <div class="resumeItem">
-            <ul>
+            <ul class="db">
               <li>Created an Oracle Relational Database with 4 tables.</li>
               <li>These tables were used to store the products, recipes, ingredients and supplies for a Brewery.</li>
             </ul>
@@ -141,7 +162,7 @@
             <h3>Microsoft Access Project<h4>HVCC, <em>Spring 2014 Final Project</em></h4></h3>
           </div>
             <div class="resumeItem">
-              <ul>
+              <ul class="ma">
                 <li>Created an access database in order to select an Ubuntu based operating sytem.</li>
                 <li>The user could select a description from a drop down list derived from the OS descripition table.</li>
               </ul>
@@ -163,7 +184,7 @@
       <div class="resumeBlock">
       <h2>PROGRAMMING LANGUAGES</h2>
       <div class="resumeItem">
-        <ul>
+        <ul class="prLa">
           <li>Java</li>
           <li>C++</li>
           <li>VBA</li>
@@ -188,7 +209,7 @@
       <div class="resumeBlock">
       <h2>HONORS</h2>
       <div class="resumeItem">
-        <ul>
+        <ul class="ho">
           <li>Who's Who Among American Universities and Colleges Award (HVCC)</li>
           <li>Rensselear Leadership Award</li>
           <li>Rensselear Grant</li>
