--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -103,7 +103,7 @@
 
   <body>
     <div id="content">
-    <h1>Ryan MacKenzie</h1>
+    <h1><a href="../../index.html">Ryan T MacKenzie</a></h1>
       <ul id="contactInfo">
         <li>123 Any Avenue</li>
         <li>Schenectady, New York 00000</li>
