--- a/projects/Portfolio/Portfolio/NewPortraits/NewPortraits.html
+++ b/projects/Portfolio/Portfolio/NewPortraits/NewPortraits.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
-<script type="text/javascript">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>Untitled Document</title>
+
+  
+  
+  <script type="text/javascript">
 function MM_openBrWindow(theURL,winName,features) { //v2.0
   window.open(theURL,winName,features);
 }
@@ -32,34 +35,33 @@ function MM_swapImage() { //v3.0
 function MM_popupMsg(msg) { //v1.0
   alert(msg);
 }
-</script>
-<style type="text/css">
+  </script>
+  
+  <style type="text/css">
 body {
 	background-color: #e4edc9;
 }
-</style>
-</head>
-
-<body onload="MM_preloadImages('Images/Portfolio-Page-Hyper-Real-BuildingBoat.png','Images/Portfolio-Page-Hyper-Real-LivingRoomPond.jpg')">
-<div align="center"><img src="Images/Portfolio-Page-NewPortraitSeries-CompA.jpg" name="Base" width="1000" height="800" usemap="#Map" id="Image1" />
-  <map name="Map" id="Map">
-    <area shape="rect" coords="866,109,937,182" href="#" alt="link to narritive" onclick="MM_openBrWindow('../Interactive/Interactive.html','','resizable=yes')" />
-    <area shape="rect" coords="60,79,151,105" href="../index.html" alt="Link to home page" title="Link to home page"/>
-    <area shape="rect" coords="826,210,903,288" href="../Recolored image/Recolor.html" alt="link to recolored image" />
-    <area shape="rect" coords="816,328,895,406" href="../CreateSomethingNew/CreateNew.html" alt="link to create somthing new" />
-    <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
-    <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
-    <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
-    <area shape="rect" coords="115,613,189,700" href="#" title="Click here for a description of this image." alt="Link to hyper realtiy" onclick="MM_popupMsg('This image brings up the conflict between human made and nature made objects with the human in-between.')" />
-    <area shape="rect" coords="114,537,192,611" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('We see an eye peer through the left side of the figure looking at you is not the same as the person looking back.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompB.jpg',1)" onmouseout="MM_swapImgRestore()"/>
-    <area shape="rect" coords="114,458,189,536" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('We see the face look out with the same visage as we do when admiring our large human-made accomplishments and we think were they worth it?')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompC.jpg',1)" onmouseout="MM_swapImgRestore()"/>
-    <area shape="rect" coords="113,319,190,390" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceB.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We see a face with perfect skin and yet the man does not look happy at all. We wonder how misguided are concepts of youth and beauty being gifts are.')">
-    <area shape="rect" coords="116,251,191,318" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceC.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We see a face to thin and smooth for its age, the hair lets us on that this is unobtainable, yet will still have the most human desire of wanting the impossible.')"/>
-    <area shape="rect" coords="115,390,190,456" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceA.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We feel that her face has some unobtainable quality about it. The face is the idea image that we are told is beauty in magazines and we are disturbed that this look is unobtainable in reality.')"/>
-<area shape="rect" coords="281,208,681,459" href="#" title="Click here for a description of the top 3 images &quot;Distorted Beauty&quot;." onclick="MM_popupMsg('The Distorted Beauty project attempts to see how alien like humans can get with photoshop work using tools like the healing brushes, the clone stamp, and the liquify tool.')"/>
-    <area shape="rect" coords="287,458,679,742" href="#" title="Click here for a description of the bottom 3 images &quot;Composite Portrait &quot;" onclick="MM_popupMsg('The composite portrait project seeks to create a surreal face by combining several faces and textures.')"/>
-  </map>
+  </style>
+</head><body onload="MM_preloadImages('Images/Portfolio-Page-Hyper-Real-BuildingBoat.png','Images/Portfolio-Page-Hyper-Real-LivingRoomPond.jpg')">
+<div align="center"><img src="Images/Portfolio-Page-NewPortraitSeries-CompA.jpg" name="Base" usemap="#Map" id="Image1" height="800" width="1000" /> <map name="Map" id="Map">
+<area shape="rect" coords="866,109,937,182" href="#" alt="link to narritive" onclick="MM_openBrWindow('../Interactive/Interactive.html','','resizable=yes')" />
+<area shape="rect" coords="60,79,151,105" href="../index.html" alt="Link to home page" title="Link to home page" />
+<area shape="rect" coords="826,210,903,288" href="../Recolored%20image/Recolor.html" alt="link to recolored image" />
+<area shape="rect" coords="816,328,895,406" href="../CreateSomethingNew/CreateNew.html" alt="link to create somthing new" />
+<area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
+<area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
+<area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
+<area shape="rect" coords="61,51,117,79" href="../../../../index.html" alt="Link to Main Home" title="Link to Main Home Page" />
+<area shape="rect" coords="118,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me" />
+<area shape="rect" coords="115,613,189,700" href="#" title="Click here for a description of this image." alt="Link to hyper realtiy" onclick="MM_popupMsg('This image brings up the conflict between human made and nature made objects with the human in-between.')" />
+<area shape="rect" coords="114,537,192,611" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('We see an eye peer through the left side of the figure looking at you is not the same as the person looking back.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompB.jpg',1)" onmouseout="MM_swapImgRestore()" />
+<area shape="rect" coords="114,458,189,536" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('We see the face look out with the same visage as we do when admiring our large human-made accomplishments and we think were they worth it?')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompC.jpg',1)" onmouseout="MM_swapImgRestore()" />
+<area shape="rect" coords="113,319,190,390" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceB.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We see a face with perfect skin and yet the man does not look happy at all. We wonder how misguided are concepts of youth and beauty being gifts are.')" />
+<area shape="rect" coords="116,251,191,318" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceC.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We see a face to thin and smooth for its age, the hair lets us on that this is unobtainable, yet will still have the most human desire of wanting the impossible.')" />
+<area shape="rect" coords="115,390,190,456" href="#" title="Click here for a description of this image." onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-FaceA.jpg',1)" onmouseout="MM_swapImgRestore()" onclick="MM_popupMsg('We feel that her face has some unobtainable quality about it. The face is the idea image that we are told is beauty in magazines and we are disturbed that this look is unobtainable in reality.')" />
+<area shape="rect" coords="281,208,681,459" href="#" title="Click here for a description of the top 3 images &quot;Distorted Beauty&quot;." onclick="MM_popupMsg('The Distorted Beauty project attempts to see how alien like humans can get with photoshop work using tools like the healing brushes, the clone stamp, and the liquify tool.')" />
+<area shape="rect" coords="287,458,679,742" href="#" title="Click here for a description of the bottom 3 images &quot;Composite Portrait &quot;" onclick="MM_popupMsg('The composite portrait project seeks to create a surreal face by combining several faces and textures.')" />
+</map>
 </div>
-</body>
-</html>
+
+</body></html>
