--- a/projects/Portfolio/Portfolio/Recolored image/Recolor.html
+++ b/projects/Portfolio/Portfolio/Recolored image/Recolor.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Recolored Image Project</title>
-<script type="text/javascript">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Recolored Image Project</title>
+
+  
+  
+  <script type="text/javascript">
 function MM_openBrWindow(theURL,winName,features) { //v2.0
   window.open(theURL,winName,features);
 }
@@ -32,27 +35,26 @@ function MM_swapImage() { //v3.0
 function MM_popupMsg(msg) { //v1.0
   alert(msg);
 }
-</script>
-<style type="text/css">
+  </script>
+  
+  <style type="text/css">
 body {
 	background-color: #e4edc9;
 }
-</style>
-</head>
-
-<body onload="MM_preloadImages('Images/Portfolio-Page-Hyper-Real-BuildingBoat.png','Images/Portfolio-Page-Hyper-Real-LivingRoomPond.jpg')">
-<div align="center"><img src="Images/Portfolio-Page-RecoloredImagepsd.jpg" name="Base" width="1000" height="800" usemap="#Map" id="Image1" />
-  <map name="Map" id="Map">
-    <area shape="rect" coords="866,109,937,182" href="#" alt="link to narritive" onclick="MM_openBrWindow('../Interactive/Interactive.html','','resizable=yes')" />
-    <area shape="rect" coords="60,79,151,105" href="../index.html" alt="Link to home page" title="Link to home page"/>
-    <area shape="rect" coords="826,210,903,288" href="Recolor.html" alt="link to recolored image" />
-    <area shape="rect" coords="816,328,895,406" href="../CreateSomethingNew/CreateNew.html" alt="link to create somthing new" />
-    <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
-    <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
-    <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
-    <area shape="rect" coords="56,211,762,745" href="#" title="Click here for a description of this project/image." onclick="MM_popupMsg('The purpose of this project was to create a surreal image by turning a photo black and white photo in photoshop into a colored one by collaring over the image with brushes.This image ttys to bring the viewer to their perfect summer day.')"/> 
+  </style>
+</head><body onload="MM_preloadImages('Images/Portfolio-Page-Hyper-Real-BuildingBoat.png','Images/Portfolio-Page-Hyper-Real-LivingRoomPond.jpg')">
+<div align="center"><img src="Images/Portfolio-Page-RecoloredImagepsd.jpg" name="Base" usemap="#Map" id="Image1" height="800" width="1000" /> <map name="Map" id="Map">
+<area shape="rect" coords="866,109,937,182" href="#" alt="link to narritive" onclick="MM_openBrWindow('../Interactive/Interactive.html','','resizable=yes')" />
+<area shape="rect" coords="60,79,151,105" href="../index.html" alt="Link to home page" title="Link to home page" />
+<area shape="rect" coords="826,210,903,288" href="Recolor.html" alt="link to recolored image" />
+<area shape="rect" coords="816,328,895,406" href="../CreateSomethingNew/CreateNew.html" alt="link to create somthing new" />
+<area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
+<area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
+<area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
+<area shape="rect" coords="61,51,117,79" href="../../../../index.html" alt="Link to Main Home" title="Link to Main Home Page" />
+<area shape="rect" coords="118,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me" />
+<area shape="rect" coords="56,211,762,745" href="#" title="Click here for a description of this project/image." onclick="MM_popupMsg('The purpose of this project was to create a surreal image by turning a photo black and white photo in photoshop into a colored one by collaring over the image with brushes.This image ttys to bring the viewer to their perfect summer day.')" />
 </map>
 </div>
-</body>
-</html>
+
+</body></html>
