--- a/projects/Portfolio/Portfolio/Erasure/Erasure.html
+++ b/projects/Portfolio/Portfolio/Erasure/Erasure.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -35,7 +36,7 @@ function MM_popupMsg(msg) { //v1.0
 </script>
 <style type="text/css">
 body {
-	background-color: #e4edc9;
+  background-color: #e4edc9;
 }
 </style>
 </head>
@@ -50,7 +51,8 @@ body {
     <area shape="rect" coords="870,644,953,722" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../../index.html" alt="Link to Main Home" title="Link to Main Home Page" />
+    <area shape="rect" coords="118,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me" />
     <area shape="rect" coords="88,530,227,678" href="#" alt="Link to hyper realtiy" onclick="MM_popupMsg('This image brings up a scene with an exhausted person getting ready to go to sleep after a long day as the sun sets. We think less about the individual because the body has been cut out of the picture.')" />
     <area shape="rect" coords="82,385,228,523" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('In this image, by removing the numbers from this clock tower the concept of time dissolves and we get to think of the tower as a monument of years past rather than just a large time telling device.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-Erasure-BigBen.jpg',1)" onmouseout="MM_swapImgRestore()"/>
     <area shape="rect" coords="91,231,221,372" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('In this image we are welcomed to see beyond the lighthouse and think of the purpose rather than the looks of the lighthouse as we look at the sea behind and as we view on the seaside.  Normally when viewing a lighthouse at daytime we do not think of it’s nightly duties.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-Erasure-Lighthouse.jpg',1)" onmouseout="MM_swapImgRestore()"/>
