--- a/projects/Portfolio/AboutMe/AboutMe.html
+++ b/projects/Portfolio/AboutMe/AboutMe.html
@@ -50,7 +50,8 @@ body {
     <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="56,211,762,745" href="#" title="Click here for details on this." onclick="MM_popupMsg('Look at my other pages on this site!')"/> 
 </map>
 </div>
