--- a/projects/Portfolio/CreateSomethingNew/CreateNew.html
+++ b/projects/Portfolio/CreateSomethingNew/CreateNew.html
@@ -50,7 +50,8 @@ body {
     <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="64,567,151,645" href="#" alt="Link to hyper realtiy" onclick="MM_popupMsg('This image tries to get the viewer to think about; how in the modern day mega corporations are thinking of workers as replaceable machines rather than people.')" />
     <area shape="rect" coords="65,395,150,477" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('This image brings the viewer to place where mars and earth are warped together because of a tear in the space-time continuum.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-Hyper-Real-BuildingBoat.png',1);MM_swapImage('Image1','','Images/Portfolio-Page-CreateSomethingNew-Mars.jpg',1)" onmouseout="MM_swapImgRestore()"/>
     <area shape="rect" coords="64,235,151,332" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('This image tries to unite the earth as a whole in one collage, with the hope that it will inspire citizens earth will come together as one community. ')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-CreateSomethingNew-Collage.jpg',1)" onmouseout="MM_swapImgRestore()"/>
