--- a/projects/Portfolio/NewPortraits/NewPortraits.html
+++ b/projects/Portfolio/NewPortraits/NewPortraits.html
@@ -50,7 +50,8 @@ body {
     <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="115,613,189,700" href="#" title="Click here for a description of this image." alt="Link to hyper realtiy" onclick="MM_popupMsg('This image brings up the conflict between human made and nature made objects with the human in-between.')" />
     <area shape="rect" coords="114,537,192,611" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('We see an eye peer through the left side of the figure looking at you is not the same as the person looking back.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompB.jpg',1)" onmouseout="MM_swapImgRestore()"/>
     <area shape="rect" coords="114,458,189,536" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('We see the face look out with the same visage as we do when admiring our large human-made accomplishments and we think were they worth it?')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-NewPortraitSeries-CompC.jpg',1)" onmouseout="MM_swapImgRestore()"/>
