--- a/projects/Portfolio/HyperReality/HyperReality.html
+++ b/projects/Portfolio/HyperReality/HyperReality.html
@@ -50,7 +50,8 @@ body {
     <area shape="rect" coords="870,643,953,721" href="HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="72,566,146,644" href="#" alt="Link to hyper realtiy" onclick="MM_popupMsg('This image brings the viewer to see the NYC skyline on the Hudson River, however the more the viewer looks they see the concepts of day/night and position/location dissolve.')" />
     <area shape="rect" coords="66,396,148,476" href="#" alt="Link to building boat" title="Click here for a description of this image." onclick="MM_popupMsg('This image tries to evoke a strange feeling in the viewer that this building could not exist on earth although to the viewer this place looks strangely like earth.')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-Hyper-Real-BuildingBoat.jpg',1)" onmouseout="MM_swapImgRestore()"/>
     <area shape="rect" coords="69,242,148,326" href="#" alt="Link to LivingRoomPond image" title="Click here for a description of this image." onclick="MM_popupMsg('This image asks what happens if humans are gone and in an instant and nature grows into man made buildings such as houses. We start to see nature erasing the presence of humans altogether.\r')" onmouseover="MM_swapImage('Image1','','Images/Portfolio-Page-Hyper-Real-LivingRoomPond.jpg',1)" onmouseout="MM_swapImgRestore()"/>
