--- a/projects/Portfolio/Recolored image/Recolor.html
+++ b/projects/Portfolio/Recolored image/Recolor.html
@@ -50,7 +50,8 @@ body {
     <area shape="rect" coords="870,643,953,721" href="../HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="../Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="../NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="../AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="56,211,762,745" href="#" title="Click here for a description of this project/image." onclick="MM_popupMsg('The purpose of this project was to create a surreal image by turning a photo black and white photo in photoshop into a colored one by collaring over the image with brushes.This image ttys to bring the viewer to their perfect summer day.')"/> 
 </map>
 </div>
