--- a/projects/Portfolio/index.html
+++ b/projects/Portfolio/index.html
@@ -28,7 +28,8 @@ img{
     <area shape="rect" coords="870,643,953,721" href="HyperReality/HyperReality.html" alt="link to hyper reality" />
     <area shape="rect" coords="825,439,906,516" href="Erasure/Erasure.html" alt="link to erasure" />
     <area shape="rect" coords="849,542,930,618" href="NewPortraits/NewPortraits.html" alt="link to new portrait series" />
-    <area shape="rect" coords="61,51,227,79" href="AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
+    <area shape="rect" coords="61,51,117,79" href="../../index.html" alt="Link to Main Home Page" title="Link to Main Home Page"/>
+    <area shape="rect" coords="117,51,227,79" href="./AboutMe/AboutMe.html" alt="Link to about me" title="Link to about me"/>
     <area shape="rect" coords="47,183,767,739" href="Recolored image/Recolor.html" title="Link to Recolored Image"/>
   </map>
 </div>
