RSS/Atom Feeds w/ Channel Title & Description of viewing the protocols.
The RSS and ATOM .xml files now have a channel title that matches the
sites brand. I have added a description of using an RSS/ATOM reader to
view the XML files with formating.

--- a/projects/lab4/index.html
+++ b/projects/lab4/index.html
@@ -6,6 +6,10 @@
 		<link href="../../resources/siteTemplate.css" rel="stylesheet" type ="text css"/>
 	</head>
 	<body>
+		<p>
+			The folllowing links can be viewed by adding them to your
+			 RSS/ATOM Reader:
+		</p>
 		<ul class="menu">
 			<li><a href="./Lab4RSS.xml">Lab 4 RSS feed XML</a></li>
 			<li><a href="./Lab4Atom.xml">Lab 4 Atom feed XML</a></li>
