--- a/projects/projects.html
+++ b/projects/projects.html
@@ -18,6 +18,7 @@
       <nav>
           <p><a href="../index.html">Landing Page</a> 
              <a href="./projects.html">Projects</a>
+             <a href="./projects/Portfolio">Portfolio</a>
           </p>
       </nav>
       
