--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,9 +16,10 @@
         <h3>Intro to ITWS, Projects, Ryan T Mackenzie </h3>
       </header>
       <nav>
-          <p><a href="../index.html">Landing Page</a> 
+          <p>
+             <a href="../index.html">Landing Page</a> 
              <a href="./projects.html">Projects</a>
-             <a href="./projects/Portfolio">Portfolio</a>
+             <a href="./Portfolio/index.html">Portfolio</a>
           </p>
       </nav>
       
