--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <h3>Intro to ITWS, Landing page, Ryan T Mackenzie </h3>
       </header>
       <nav>
-          <p><a href="./index.html">Landing Page</a> 
-          <a href="./projects/projects.html">Projects</a>
+          <p>
+            <a href="./index.html">Landing Page</a> 
+            <a href="./projects/projects.html">Projects</a>
+            <a href="./projects/Portfolio/index.html">Portfolio</a>
         </p>
       </nav>
       
       <section>
-        <p><em>Check out the projects page, more projects will be added soon.</em></p>
+        <p><em>Check out the projects or portfolio pages</em></p>
       </section>
         
       <footer>
