--- a/projects/lab2/RyanThomasMackenzie-resume.html
+++ b/projects/lab2/RyanThomasMackenzie-resume.html
@@ -200,8 +200,9 @@
           <li>SQL</li>
           <li>Cisco IOS</li>
           <li>GitHub</li>
-          <li>Bitbucket</li>
-          <li>Hadoop</li>
+          <li>Atlassian</li>
+          <li>ASP</li>
+          <li>Adobe ColdFusion</li>
           </ul>
         </div>
       </div>
